# pyspark-aidetic-assignment

./: .gitignore  README.md  pyproject.toml
notebooks/: notebook_dev.ipynb
src/pyspark_aidetic_assignment/: dependency.py  job.py
src/pyspark_aidetic_assignment/data/output/: .part-00000-ea52d0a6-b72f-4616-8f84-cf7ef9c68f98-c000.csv.crc  part-00000-ea52d0a6-b72f-4616-8f84-cf7ef9c68f98-c000.csv
